# vimz

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  benchmark.sh  bright.circom  check-env.sh  gen.py  python-requirements.txt
analysis_utils/: analyze_circuits.py  compare_circuits.py  requirements.txt
ark-circuits/: Cargo.toml
ark-circuits/src/: hash_step.rs  lib.rs
circom/: bright.circom  crop.circom  crop_edited.circom  grayscale.circom  inpput_crop.json  no_round.circom  resize.circom  round.circom  squares.circom
circom/hash/: hash.circom  img_hash.circom  input.json  mt2.circom  mt4.circom
circom/utils/: pixels.circom
circuits/: .gitignore  NH_optimized_crop_step.circom  NH_resize_step.circom  OH_brightness_step.circom  blur_step.circom  blur_step_4K.circom  blur_step_HD.circom  brightness_step.circom  brightness_step_4K.circom  brightness_step_HD.circom  build_circuits.sh  clear_builds.sh  contrast_step_4K.circom  contrast_step_HD.circom  crop_step.circom  crop_step_4K.circom  crop_step_HD.circom  full_image_hash.circom  grayscale_step.circom  grayscale_step_4K.circom  grayscale_step_HD.circom  hash_step_4K.circom  hash_step_HD.circom  image_running_hash.circom  input.json  optimized_crop_step.circom  optimized_crop_step_4K.circom  optimized_crop_step_HD.circom  redaction_step.circom  resize_step_4K.circom  resize_step_4k.circom  resize_step_HD.circom  sharpness_step_4K.circom  sharpness_step_HD.circom  support_step.circom  tiny_contrast_step.circom
circuits/multi-steps/: contrast_multi_step.circom  grayscale_multi_step.circom  sharpen_multi_step.circom
contracts/: BlurVerifier.sol  BrightnessVerifier.sol  ContrastVerifier.sol  CropVerifier.sol  GrayscaleVerifier.sol  HashVerifier.sol  README.md  RedactVerifier.sol  ResizeVerifier.sol  SharpnessVerifier.sol  main.sol
front/: next.config.ts
front/app/: layout.tsx
gui/: .gitignore  README.md  global.d.ts  image-redactor.tsx  package.json  tailwind.config.js  v0-user-next.config.js
image_editor/: img_utils.py  main.py  requirements.txt
image_formatter/: main.py
image_hasher/: main.py
js/: package.json  poseidon_hasher.js  utils.js
marketplace/: .anvil.env  .gitignore  Makefile  README.md  foundry.toml  pyproject.toml  run_scenario.sh
marketplace/contracts/: AssetGateway.sol  AttributionClaim.sol  BlurVerifier.sol  BrightnessVerifier.sol  ContrastVerifier.sol  CreatorRegistry.sol  CropVerifier.sol  DeviceRegistry.sol  GrayscaleVerifier.sol  HashVerifier.sol  IERC4907.sol  ImageCollection.sol  ImageGateway.sol  ImageLicenseToken.sol  LicenseToken.sol  Licensing.sol  Marketplace.sol  OnChainVerification.sol  PhotographyContest.sol  RedactVerifier.sol  ResizeVerifier.sol  SharpnessVerifier.sol  Utils.sol
marketplace/diagrams/: contract-architecture.mmd  image-registration.mmd  ownership-licensing.mmd  photography-contest.mmd
marketplace/image-data/: generate-data.sh  img1-blur.hash  img1-grayscale.hash  img1-sharpness-grayscale.hash  img1-sharpness.hash  img1.hash  img2-contrast-sharpness.hash  img2-contrast.hash  img2.hash
marketplace/proofs/: generate-proofs.sh  img1-blur.proof  img1-grayscale.proof  img1-sharpness-grayscale.proof  img1-sharpness.proof  img2-contrast-sharpness.proof  img2-contrast.proof
marketplace/scenarios/: __init__.py  marketplace.py  photography_contest.py  raw_proof_verification.py  register_assets.py  register_creators.py  register_devices.py  register_edited_asset.py  register_images.py  register_new_asset.py
marketplace/vimz_marketplace_sdk/: account.py  artifacts.py  chain.py  creator.py  deploy.py  device.py  logging_config.py  types.py
marketplace/vimz_marketplace_sdk/contracts/: asset_gateway.py  contract.py  creator_registry.py  device_registry.py  image_gateway.py  license_token.py  marketplace.py  photography_contest.py  verifiers.py
nova/: Cargo.toml  Makefile  rust-toolchain.toml
nova/circom/: 1d_hash.circom  NH_resize_step.circom  NH_sharpen_step.circom  OH_brightness_step.circom  blur_step.circom  brightness_step.circom  build_circuits.sh  clear_builds.sh  contrast_step.circom  convolution_step.circom  crop_step.circom  crop_step_op.circom  grayscale_step.circom  optimized_crop_step.circom  resize_step.circom  resize_step_4k.circom  row_hasher.circom  sharpen_step.circom  toy.circom
nova/circom/multi-steps/: brightness_multi_step.circom  crop_multi_step.circom  resize_multi_step.circom
nova/circom/utils/: pixels.circom  row_hasher.circom
nova/src/: backend.rs  config.rs  folding.rs  input.rs  logging.rs  main.rs  nova_snark.rs  solidity.rs  time.rs  transformation.rs
nova/src/nova_snark_backend/: folding.rs  input.rs  mod.rs
nova/src/sonobe_backend/: decider.rs  folding.rs  input.rs  mod.rs  solidity.rs
on-chain-verification-showcase/: .gitignore  ChallengeHub.sol  Deploy.s.sol  README.md  check-env.sh  foundry.toml  package-lock.json  package.json  scenario.sh  verifier-contracts
py_modules/: crop.py  greyscale.py  hasher.py  image_formatter.py  redact.py  redact2.py  requirements.txt  rezise.py
pyvimz/: .gitignore  pyproject.toml
pyvimz/pyvimz/: image_editor.py  image_hasher.py
pyvimz/pyvimz/circuits/: analyze_circuits.py  compare_circuits.py
pyvimz/pyvimz/img/: ops.py  plotting.py  transformations.py
pyvimz/pyvimz/img/circuits/: compare_circuits.py
vimz/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
vimz/src/: config.rs  image_hash.rs  input.rs  lib.rs  logging.rs  main.rs  transformation.rs
vimz/src/nova_snark_backend/: folding.rs  input.rs  mod.rs
vimz/src/sonobe_backend/: circuit.rs  decider.rs  folding.rs  input.rs  mod.rs  solidity.rs
vimz/src/sonobe_backend/circuits/: arkworks.rs  circom.rs  mod.rs
vimz/src/sonobe_backend/circuits/arkworks/: brightness.rs  compression.rs  contrast.rs  grayscale.rs  hash.rs  input.rs  ivc_state.rs  kernel.rs  macros.rs  mod.rs  pixel.rs  redact.rs  step_input.rs  utils.rs
vimz/src/sonobe_backend/circuits/arkworks/transformations/: blur.rs  brightness.rs  contrast.rs  crop.rs  grayscale.rs  hash.rs  mod.rs  redact.rs  resize.rs  sharpness.rs
(+95 files in other folders)
