[workspace]
members = [
    "vimz",
]
resolver = "2"

[workspace.package]
authors = ["Zero Savvy"]
edition = "2021"
license = "MIT"
repository = "https://github.com/zero-savvy/vimz"

[workspace.dependencies]
ark-bn254 = { version = "^0.5.0" }
ark-crypto-primitives = { version = "^0.5.0" }
ark-ff = { version = "^0.5.0" }
ark-grumpkin = { version = "^0.5.0" }
ark-groth16 = { version = "^0.5.0" }
ark-r1cs-std = { version = "^0.5.0" }
ark-relations = { version = "^0.5.0" }
clap = { version = "4.5.16" }
num-bigint = { version = "0.4.3" }
num-traits = { version = "0.2.15" }
paste = { version = "1.0.15" }
rand = { version = "0.8.5" }
serde = { version = "1.0" }
serde_json = { version = "1.0.85" }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.3.18" }

sonobe = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "folding-schemes" }
sonobe-frontends = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "experimental-frontends" }
sonobe-solidity = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "solidity-verifiers" }

nova-scotia = { version = "0.5.0" }
nova-snark = { version = "0.23.0" }

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/pmikolajczyk41/r1cs-std", rev = "d8e18fa" }
