[package]
name = "ark-circuits"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-bn254 = { workspace = true, features = ["r1cs"] }
ark-crypto-primitives = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true, features = ["parallel"] }
ark-relations = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

sonobe = { workspace = true }
