[package]
name = "vimz"
version = "1.3.0"
edition = "2021"

[dependencies]
pasta_curves = "0.5"
serde = "1.0"
serde_json = "1.0.85"
clap = "2.33"

ark-bn254 = { version = "^0.4.0", features = ["r1cs"] }
ark-grumpkin = { version = "0.4.0", features = ["r1cs"] }
ark-groth16 = { version = "0.4.0" }

num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
sonobe = { git = "https://github.com/privacy-scaling-explorations/sonobe", rev = "7097c001fc876578be2229d3590d506858bc0069", package = "folding-schemes" }

[patch.crates-io]
ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch="cherry-pick" }
