[package]
name = "vimz"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vimz"
path = "src/bin/main.rs"

[[bin]]
name = "generate-verifier-contract"
path = "src/bin/generate_verifier_contract.rs"

[dependencies]
ark-bn254 = { workspace = true, features = ["r1cs"] }
ark-grumpkin = { workspace = true, features = ["r1cs"] }
ark-groth16 = { workspace = true, features = ["parallel"] }
ark-r1cs-std = { workspace = true, features = ["parallel"] }
ark-relations = { workspace = true }
clap = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

sonobe = { workspace = true }
sonobe-frontends = { workspace = true }
sonobe-solidity = { workspace = true }

nova-scotia = { workspace = true }
nova-snark = { workspace = true }

[features]
light-test = [
    "sonobe/light-test",
]
