[package]
name = "vimz"
version = "2.0.0"
authors = ["Zero Savvy"]
edition = "2024"
license = "MIT"
repository = "https://github.com/zero-savvy/vimz"

[[bin]]
name = "vimz"
path = "src/bin/main.rs"

[[bin]]
name = "generate-verifier-contract"
path = "src/bin/generate_verifier_contract.rs"

[dependencies]
ark-bn254 = { version = "^0.5.0", features = ["r1cs"] }
ark-crypto-primitives = { version = "^0.5.0" }
ark-ff = { version = "^0.5.0" }
ark-grumpkin = { version = "^0.5.0", features = ["r1cs"] }
ark-groth16 = { version = "^0.5.0", features = ["parallel"] }
ark-r1cs-std = { version = "^0.5.0", features = ["parallel"] }
ark-relations = { version = "^0.5.0" }
arkworks-small-values-ops = { version = "0.0.4" }
clap = { version = "4.5.16", features = ["derive"] }
num-bigint = { version = "0.4.3" }
num-traits = { version = "0.2.15" }
paste = { version = "1.0.15" }
rand = { version = "0.8.5" }
serde = { version = "1.0" }
serde_json = { version = "1.0.85" }
tracing = { version = "0.1.26" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "env-filter"] }

sonobe = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "folding-schemes" }
sonobe-frontends = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "experimental-frontends" }
sonobe-solidity = { git = "https://github.com/pmikolajczyk41/sonobe", rev = "d312916", package = "solidity-verifiers" }

nova-scotia = { version = "0.5.0" }
nova-snark = { version = "0.23.0" }

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/pmikolajczyk41/r1cs-std", rev = "d8e18fa" }

[features]
light-test = [
    "sonobe/light-test",
]
